<resources>
    <string name="app_name">MyChef_ORWIMA</string>
    <string name="heading">MyChef</string>
    <string name="cook_btn">Choose meal</string>
    <string name="about_btn">about?</string>
    <string name="plus_sign">+</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_row1">Tired of thinking what meal you should take with your beer?</string>
    <string name="about_row2">Than this is app for you!</string>
    <string name="about_row3">Cheers! </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
