<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAbout">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/black"
        android:text="@string/about_row1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="28sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/black"
        android:text="@string/about_row2"
        android:layout_marginTop="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/heading"
        android:text="@string/about_row3"
        android:layout_marginTop="128dp"/>



</FrameLayout>